# offering_finder

./: .gitignore  .gitsecrets-patterns.txt  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
mycli/: elasticache.py  opensearch.py  rds.py  savingsplans.py
offering_finder/: README.md  pyproject.toml
offering_finder/src/offering_finder/: __init__.py  cli.py
offering_finder/src/offering_finder/clients/: AWSClient.py  rds_client.py
offering_finder/src/offering_finder/managers/: rds_manager.py  savingsplans_manager.py
offering_finder/src/offering_finder/models/: elasticache_params.py  opensearch_params.py  rds_params.py  savingsplans_params.py
offering_finder/src/offering_finder/mycli/: elasticache.py  rds.py  savingsplans.py
offering_finder/tests/: tests_rds_manager.py
src/offering_finder/: cli.py
src/offering_finder/clients/: AWSClient.py
src/offering_finder/managers/: elasticache_manager.py  opensearch_manager.py  rds_manager.py  savingsplans_manager.py
src/offering_finder/models/: elasticache_params.py  opensearch_params.py  rds_params.py  savingsplans_params.py
src/offering_finder/mycli/: elasticache.py  opensearch.py  rds.py  savingsplans.py
tests/: test_awsclient.py  test_elasticache_manager.py  test_opensearch_manager.py  test_rds_manager.py  test_savingsplans_manager.py
